# iqalox.poc

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
compiler/: Iqalox.sln  README.md
compiler/src/: Ast.fs  Bound.fs  Bytecode.fs  Codegen.fs  Disassembler.fs  Iqaloxc.fsproj  Parser.fs  Prelude.fs  Program.fs  Resolver.fs  Scanner.fs  Token.fs
compiler/tests/: BytecodeTests.fs  CodegenTests.fs  Iqaloxc.Tests.fsproj  ParserTests.fs  PreludeTests.fs  ResolverTests.fs  ScannerTests.fs
docs/: LANGUAGE-0.1.md  LANGUAGE-POC.md  LANGUAGE.md  PLAN-0.1-POC.md  PLAN-0.1.md  PLAN-0.2.md  PLAN-0.3.md
langspec/: README.md  SYNTAX_GRAMMAR.md
langspec/0.1/: README.md  SYNTAX_GRAMMAR.md
langspec/0.2/: README.md  SYNTAX_GRAMMAR.md
langspec/0.3/: README.md
langspec/examples/: array_stdlib.iqx  classes.iqx  cons_and_comprehensions.iqx  control_flow.iqx  functions.iqx  indexing.iqx  inheritance.iqx  lambdas.iqx  loops.iqx  matrices.iqx  mixins_and_traits.iqx  operators.iqx  properties.iqx  spread.iqx  visibility.iqx
poc/src/: environment.py  interpreter.py  parser.py  scanner.py
poc/tests/: test_error_reporting.py  test_functions.py  (+3 more)
scripts/: conformance-test.sh  phase1-roundtrip-smoke-test.sh  phase5-compile-smoke-test.sh  phase7-run-smoke-test.sh
src/: __main__.py  ast_printer.py  callable.py  error.py  expression.py  interpreter.py  iqalox.py  parser.py  scanner.py  statement.py  token.py
tests/: conftest.py  test_classes.py  test_functions.py  test_interpreter.py  test_parser.py  test_pipe_and_ignore.py  test_scanner.py
tools/: generate_ast.py
vm/: .gitignore  CMakeLists.txt  README.md
vm/src/: bytecode.cpp  bytecode.hpp  main.cpp  natives.cpp  natives.hpp  object.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
vm/tests/: CMakeLists.txt  chunk_builder.hpp  test_bytecode.cpp  test_classes.cpp  test_value.cpp  test_vm.cpp
(+29 files in other folders)
